Config modules for db users (#255)
* [S73] Feature: Per-Instance Artifactories Module (#210)

* Added artifactories facets modules

* added schema

* updated spec

* changed type to string

* updated to null

* introduced indentation

* updated spec

* updated spec to have include_all false as default

* updated type from bool to boolean

* Revert "[S73] Feature: Per-Instance Artifactories Module (#210)" (#214)

This reverts commit 71471b7174740ba1ce3b8f76b985e7b007135de6.

* [S73] Feature: Per-Instance Artifactories Module (#210)

* Added artifactories facets modules

* added schema

* updated spec

* changed type to string

* updated to null

* introduced indentation

* updated spec

* updated spec to have include_all false as default

* updated type from bool to boolean

* Revert "[S73] Feature: Per-Instance Artifactories Module (#210)" (#214)

This reverts commit 71471b7174740ba1ce3b8f76b985e7b007135de6.

* feat: Add ecs_service intent for managing containers in Amazon ECS

* [S73] Feature: Per-Instance Artifactories Module (#215)

* Added artifactories facets modules

* added schema

* updated spec

* changed type to string

* updated to null

* introduced indentation

* updated spec

* updated spec to have include_all false as default

* updated type from bool to boolean

* added intent level output

* add database operator as per instance module

* add database operator as necessary input for postgres user

* add crossplane as per instance module

* add crossplane as necessary input in mysql user

* update the regex for crossplane

* add mongodb auth operator as per instance module

* add mongodb auth operator as necessary input in mongo user

* update description

* update output string

* add database operator intent in index.json

* update sample

* update sample

* update description mongo user

* formatting changes

* move values to spec and use facets as default namespace

* fix display name and description in mongo user

* added back inputs

---------


--- a/modules/artifactories/default/0.1/facets.yaml
+++ b/modules/artifactories/default/0.1/facets.yaml
@@ -7,6 +7,14 @@ clouds:
 - kubernetes
 - azure
 - aws
+inputs:
+  kubernetes_details:
+    optional: false
+    type: "@output/kubernetes"
+    displayName: Kubernetes Cluster
+    default:
+      resource_type: kubernetes_cluster
+      resource_name: default
 spec:
   title: Artifactories
   type: object
@@ -48,10 +56,3 @@ sample:
   disabled: true
   spec:
     include_all: false
-inputs:
-  kubernetes_details:
-    optional: false
-    type: "@output/kubernetes"
-    default:
-      resource_type: kubernetes_cluster
-      resource_name: default
