adding back removed artifactory changes

--- a/intents/artifactories/facets.yaml
+++ b/intents/artifactories/facets.yaml
@@ -2,3 +2,6 @@ name: artifactories
 type: default
 displayName: Artifactories
 description: Provides an Artifactories resource for creating Container Registry secrets within the cluster.
+outputs:
+  - name: default
+    type: "@output/artifactories"
