--- a/modules/prometheus/k8s/0.1/facets.yaml
+++ b/modules/prometheus/k8s/0.1/facets.yaml
@@ -23,26 +23,18 @@ spec:
         description: Metadata for the Prometheus stack
         properties:
             namespace:
-            type: string
-            title: Namespace
-            description: Kubernetes namespace for the Prometheus stack
-            default: "default"
-            pattern: "^[a-z0-9]([-a-z0-9]*[a-z0-9])?$"
-            x-ui-placeholder: "e.g., monitoring, prometheus, default"
+              type: string
+              title: Namespace
+              description: Kubernetes namespace for the Prometheus stack
+              default: "default"
+              pattern: "^[a-z0-9]([-a-z0-9]*[a-z0-9])?$"
+              x-ui-placeholder: "e.g., monitoring, prometheus, default"
     values:
       type: object
       title: Custom Values
       description: Additional values to pass to the Prometheus helm chart in YAML format
       default: "{}"
       x-ui-yaml-editor: true
-
-    retention:
-      type: string
-      title: Data Retention
-      description: Time duration Prometheus shall retain data for
-      default: "100d"
-      pattern: "^[0-9]+(d|h|m)$"
-      x-ui-placeholder: "e.g., 100d, 24h, 1440m"
 
     node_selector:
       type: object
@@ -103,10 +95,12 @@ spec:
                   properties:
                     cpu:
                       type: string
+                      title: CPU Request
                       pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
                       default: "200m"
                     memory:
                       type: string
+                      title: Memory Request
                       pattern: "^([1-9]|[1-5][0-9]|6[0-4])Gi$|^([1-9]|[1-9][0-9]{1,3}|[1-5][0-9]{4}|6[0-3][0-9]{3}|64000)Mi$"
                       default: "512Mi"
                 limits:
@@ -114,25 +108,34 @@ spec:
                   properties:
                     cpu:
                       type: string
+                      title: CPU Limit
                       pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
                       default: "200m"
                     memory:
                       type: string
+                      title: Memory Limit
                       pattern: "^([1-9]|[1-5][0-9]|6[0-4])Gi$|^([1-9]|[1-9][0-9]{1,3}|[1-5][0-9]{4}|6[0-3][0-9]{3}|64000)Mi$"
                       default: "512Mi"
 
     prometheus:
       type: object
       title: Prometheus Server
-      x-ui-visible-if:
-        field: spec.enable_crds
-        values: [ true ]
       properties:
         enabled:
           type: boolean
           title: Enable Prometheus
           description: Enable/disable Prometheus server
           default: true
+        retention:
+          type: string
+          title: Data Retention
+          description: Time duration Prometheus shall retain data for
+          default: "100d"
+          pattern: "^[0-9]+(d|h|m)$"
+          x-ui-visible-if:
+            field: spec.prometheus.enabled
+            values: [ true ]
+          x-ui-placeholder: "e.g., 100d, 24h, 1440m"
         size:
           type: object
           title: Server Size
@@ -142,6 +145,7 @@ spec:
           properties:
             volume:
               type: string
+              title: Volume Size
               pattern: "^[0-9]+(\\.[0-9]+)?[G]i?$"
               default: "100Gi"
             resources:
@@ -152,10 +156,12 @@ spec:
                   properties:
                     cpu:
                       type: string
+                      title: CPU Request
                       pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
                       default: "1000m"
                     memory:
                       type: string
+                      title: Memory Request
                       pattern: "^([1-9]|[1-5][0-9]|6[0-4])Gi$|^([1-9]|[1-9][0-9]{1,3}|[1-5][0-9]{4}|6[0-3][0-9]{3}|64000)Mi$"
                       default: "4Gi"
                 limits:
@@ -163,19 +169,18 @@ spec:
                   properties:
                     cpu:
                       type: string
+                      title: CPU Limit
                       pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
                       default: "1000m"
                     memory:
                       type: string
+                      title: Memory Limit
                       pattern: "^([1-9]|[1-5][0-9]|6[0-4])Gi$|^([1-9]|[1-9][0-9]{1,3}|[1-5][0-9]{4}|6[0-3][0-9]{3}|64000)Mi$"
                       default: "4Gi"
 
     grafana:
       type: object
       title: Grafana
-      x-ui-visible-if:
-        field: spec.enable_crds
-        values: [ true ]
       properties:
         enabled:
           type: boolean
@@ -197,10 +202,12 @@ spec:
                   properties:
                     cpu:
                       type: string
+                      title: CPU Request
                       pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
                       default: "200m"
                     memory:
                       type: string
+                      title: Memory Request
                       pattern: "^([1-9]|[1-5][0-9]|6[0-4])Gi$|^([1-9]|[1-9][0-9]{1,3}|[1-5][0-9]{4}|6[0-3][0-9]{3}|64000)Mi$"
                       default: "512Mi"
                 limits:
@@ -208,19 +215,18 @@ spec:
                   properties:
                     cpu:
                       type: string
+                      title: CPU Limit
                       pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
                       default: "200m"
                     memory:
                       type: string
+                      title: Memory Limit
                       pattern: "^([1-9]|[1-5][0-9]|6[0-4])Gi$|^([1-9]|[1-9][0-9]{1,3}|[1-5][0-9]{4}|6[0-3][0-9]{3}|64000)Mi$"
                       default: "512Mi"
 
     alertmanager:
       type: object
       title: Alertmanager
-      x-ui-visible-if:
-        field: spec.enable_crds
-        values: [ true ]
       properties:
         enabled:
           type: boolean
@@ -246,10 +252,12 @@ spec:
                   properties:
                     cpu:
                       type: string
+                      title: CPU Request
                       pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
                       default: "1000m"
                     memory:
                       type: string
+                      title: Memory Request
                       pattern: "^([1-9]|[1-5][0-9]|6[0-4])Gi$|^([1-9]|[1-9][0-9]{1,3}|[1-5][0-9]{4}|6[0-3][0-9]{3}|64000)Mi$"
                       default: "2Gi"
                 limits:
@@ -257,19 +265,18 @@ spec:
                   properties:
                     cpu:
                       type: string
+                      title: CPU Limit
                       pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
                       default: "1000m"
                     memory:
                       type: string
+                      title: Memory Limit
                       pattern: "^([1-9]|[1-5][0-9]|6[0-4])Gi$|^([1-9]|[1-9][0-9]{1,3}|[1-5][0-9]{4}|6[0-3][0-9]{3}|64000)Mi$"
                       default: "2Gi"
 
     kube-state-metrics:
       type: object
       title: Kube State Metrics
-      x-ui-visible-if:
-        field: spec.enable_crds
-        values: [ true ]
       properties:
         enabled:
           type: boolean
@@ -299,10 +306,12 @@ spec:
                   properties:
                     cpu:
                       type: string
+                      title: CPU Request
                       pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
                       default: "200m"
                     memory:
                       type: string
+                      title: Memory Request
                       pattern: "^([1-9]|[1-5][0-9]|6[0-4])Gi$|^([1-9]|[1-9][0-9]{1,3}|[1-5][0-9]{4}|6[0-3][0-9]{3}|64000)Mi$"
                       default: "512Mi"
                 limits:
@@ -310,23 +319,25 @@ spec:
                   properties:
                     cpu:
                       type: string
+                      title: CPU Limit
                       pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
                       default: "200m"
                     memory:
                       type: string
+                      title: Memory Limit
                       pattern: "^([1-9]|[1-5][0-9]|6[0-4])Gi$|^([1-9]|[1-9][0-9]{1,3}|[1-5][0-9]{4}|6[0-3][0-9]{3}|64000)Mi$"
                       default: "512Mi"
   x-ui-order:
+    - metadata
     - operator
     - enable_crds
     - prometheus
     - alertmanager
     - grafana
     - kube-state-metrics
-    - retention
-    - values
     - node_selector
     - tolerations
+    - values
 
 sample:
   $schema: https://facets-cloud.github.io/facets-schemas/schemas/prometheus/prometheus.schema.json
@@ -338,9 +349,8 @@ sample:
   disabled: true
   spec:
     enable_crds: true
-    retention: "100d"
-    node_selector:
-    tolerations:
+    node_selector: {}
+    tolerations: []
     values: {}
     operator:
       enabled: true
@@ -354,6 +364,7 @@ sample:
             memory: "512Mi"
     prometheus:
       enabled: true
+      retention: "100d"
       size:
         volume: "100Gi"
         resources:
