--- a/intents/configuration/facets.yaml
+++ b/intents/configuration/facets.yaml
@@ -1,5 +1,5 @@
 name: configuration
-type: config
+type: configuration
 displayName: Configuration
 description: A config resource to define the configuration of underlying resources.
 iconUrl: https://cdn-icons-png.flaticon.com/512/8053/8053573.png
