added outputs for vpc (#333)
* added outputs for vpc

* fixed outputs

--- a/modules/kubernetes_cluster/aws_eks/0.2/facets.yaml
+++ b/modules/kubernetes_cluster/aws_eks/0.2/facets.yaml
@@ -5,6 +5,9 @@ version: "0.2"
 description: Adds kubernetes cluster - eks flavor
 clouds:
   - aws
+inputs:
+  network_details:
+    type: "@outputs/aws_vpc"
 spec:
   title: Kubernetes Cluster
   description: Specification of the kubernetes cluster for aws eks flavor
