--- a/modules/kubernetes_cluster/aws_eks/0.3/facets.yaml
+++ b/modules/kubernetes_cluster/aws_eks/0.3/facets.yaml
@@ -243,24 +243,24 @@ outputs:
         source: hashicorp/kubernetes
         version: 2.17.0
         attributes:
-          host: attributes.auth.host
-          token: attributes.auth.token
-          cluster_ca_certificate: attributes.auth.cluster_ca_certificate
+          host: attributes.k8s_details.auth.host
+          token: attributes.k8s_details.auth.token
+          cluster_ca_certificate: attributes.k8s_details.auth.cluster_ca_certificate
       helm:
         source: hashicorp/helm
         version: 2.8.0
         attributes:
           kubernetes:
-            host: attributes.auth.host
-            token: attributes.auth.token
-            cluster_ca_certificate: attributes.auth.cluster_ca_certificate
+            host: attributes.k8s_details.auth.host
+            token: attributes.k8s_details.auth.token
+            cluster_ca_certificate: attributes.k8s_details.auth.cluster_ca_certificate
       kubernetes-alpha:
         source: hashicorp/kubernetes-alpha
         version: 0.6.0
         attributes:
-          host: attributes.auth.host
-          cluster_ca_certificate: attributes.auth.cluster_ca_certificate
-          token: attributes.auth.token
+          host: attributes.k8s_details.auth.host
+          cluster_ca_certificate: attributes.k8s_details.auth.cluster_ca_certificate
+          token: attributes.k8s_details.auth.token
 sample:
   kind: kubernetes_cluster
   flavor: aws_eks
