Enhance EKS module by adding resource requests and limits to facets.yaml and updating legacy_outputs in outputs.tf to reference the correct IAM role and security group for improved resource management and clarity.

--- a/modules/kubernetes_cluster/aws_eks/0.3/facets.yaml
+++ b/modules/kubernetes_cluster/aws_eks/0.3/facets.yaml
@@ -29,7 +29,14 @@ spec:
           type: object
           title: Values
           description: Values to pass to the secret copier.
-          default: {}
+          default:
+            resources:
+              requests:
+                cpu: "50m"
+                memory: "256Mi"
+              limits:
+                cpu: "300m"
+                memory: "1000Mi"
           x-ui-yaml-editor: true
     cluster:
       type: object
