update schema types to use integer where only whole numbers are valid

--- a/modules/kafka_topic/default/0.1/facets.yaml
+++ b/modules/kafka_topic/default/0.1/facets.yaml
@@ -31,11 +31,11 @@ spec:
           replication_factor:
             title: Replication Factor
             description: The replication factor for each partition in the topic being created.
-            type: number
+            type: integer
           partitions:
             title: Partitions
             description: "The number of partitions for the topic being created or altered."
-            type: number
+            type: integer
           configs:
             title: Configs
             description: A topic configuration override for the topic
