--- a/modules/kubernetes_node_pool/aks/0.1/facets.yaml
+++ b/modules/kubernetes_node_pool/aks/0.1/facets.yaml
@@ -17,13 +17,13 @@ spec:
     min_node_count:
       title: Min Node Count
       description: Minimum number of nodes which should exist within this node pool
-      type: number
+      type: integer
       minimum: 0
       maximum: 100
     max_node_count:
       title: Max Node Count
       description: Maximum number of nodes which should exist within this node pool
-      type: number
+      type: integer
       minimum: 0
       maximum: 100
     disk_size:
