fixed pvc volume validation regex

--- a/modules/pvc/k8s/0.1/facets.yaml
+++ b/modules/pvc/k8s/0.1/facets.yaml
@@ -21,7 +21,7 @@ spec:
           title: Volume
           description: The size of the volume.
           minLength: 1
-          pattern: "^[1-9]+[G]i?$"
+          pattern: "^[0-9]+Gi$"
           x-ui-placeholder: "e.g., '10Gi' or '50Gi'"
           x-ui-error-message: "Volume must be specified in the correct format (e.g., '10Gi' or '50Gi')."
       required:
